# dot-rush

./: CMakeLists.txt  README.md  main.cpp
src/: brain.cpp  brain.h  config.h  dots.cpp  dots.h  obstacle.cpp  obstacle.h  population.cpp  population.h
